--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -68,4 +68,4 @@ html
 
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
-    script(src="js/main.js")
+    script(src="/js/main.js")
