--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -12,11 +12,11 @@ block content
 				div.border
 					h3 Latest posts
 					hr
-					a(href="/post/" + latest.id)
-						img.imgLatest(src="images/posts/" + latest.image)
+					a(href="/posts/post/" + latest.id)
+						img.imgLatest(src=latest.image)
 					p.headertag HEALTH
 					if latest.type !== "Nothing in particular"
-						a(href="/post/" + latest.id)
+						a(href="/posts/post/" + latest.id)
 							h4.titlePosts <strong> #{latest.type}: </strong> #{latest.title}
 					else 
 						a(href="/post/" + latest.id)
@@ -64,60 +64,17 @@ block content
 					each post in posts
 						div.col-sm-12.col-md-6.col-lg-6
 							div
-								a(href="/post/" + post.id)
-									img.imgLatest(src="images/posts/" + post.image)
+								a(href="/posts/post/" + post.id)
+									img.imgLatest(src=post.image)
 								p.headertag HEALTH
 								if post.type !== "Nothing in particular"
-									a(href="/post/" + post.id)
+									a(href="/posts/post/" + post.id)
 										h4.titlePosts <strong> #{post.type}: </strong> #{post.title}
 								else 
-									a(href="/post/" + post.id)
+									a(href="/posts/post/" + post.id)
 										h4.titlePosts #{post.title}
 								p.textPosts #{post.content}
 								p.smallinfo by #{post.user.username}, #{post.createdAt} | 0 comments | x min read
-
-								//- img.imgPosts(src="images/350x220.png")
-								//- p.headertag HEALTH
-								//- 	h4.titlePosts 
-								//- 		a(href="#") <strong> Receipe: </strong> Gluten free pumkin soup
-								//- p.textPosts Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos corporis quisquam officiis sint explicabo, pariatur eveniet, quibusdam exercitationem enim quia, repudiandae laudantium reiciendis dolore quaerat asperiores accusamus!
-								//- p.smallinfo by username, 27-10-2017 | 0 comments | x min read
-					
-					//- div#bro.col-sm-12.col-md-6.col-lg-6
-					//- 	div
-					//- 		img.imgPosts(src="images/350x220.png")
-					//- 		p.headertag HACK
-					//- 		h4.titlePosts <strong> Tips 'n Tricks: </strong> How you really cut an onion
-					//- 		p.textPosts Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos corporis quisquam officiis sint explicabo, pariatur eveniet, quibusdam exercitationem enim quia, repudiandae laudantium reiciendis dolore quaerat asperiores accusamus!
-					//- 		p.smallinfo by username, 27-10-2017 | 0 comments | x min read
-					//- div#yo.col-sm-12.col-md-6.col-lg-6
-					//- 	div
-					//- 		img.imgPosts(src="images/350x220.png")
-					//- 		p.headertag CHEAT MEAL
-					//- 		h4.titlePosts <strong> Receipe: </strong> The best brownies ever  
-					//- 		p.textPosts Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos corporis quisquam officiis sint explicabo, pariatur eveniet, quibusdam exercitationem enim quia, repudiandae laudantium reiciendis dolore quaerat asperiores accusamus!
-					//- 		p.smallinfo by username, 27-10-2017 | 0 comments | x min read
-					//- div#bro.col-sm-12.col-md-6.col-lg-6
-					//- 	div
-					//- 		img.imgPosts(src="images/350x220.png")
-					//- 		p.headertag HEALTH, VEGAN
-					//- 		h4.titlePosts A list of egg-substitutes for different occasions
-					//- 		p.textPosts Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos corporis quisquam officiis sint explicabo, pariatur eveniet, quibusdam exercitationem enim quia, repudiandae laudantium reiciendis dolore quaerat asperiores accusamus!
-					//- 		p.smallinfo by username, 27-10-2017 | 0 comments | x min read
-					//- div#yo.col-sm-12.col-md-6.col-lg-6
-					//- 	div
-					//- 		img.imgPosts(src="images/350x220.png")
-					//- 		p.headertag CHEAT MEAL
-					//- 		h4.titlePosts <strong> Receipe: </strong> The best brownies ever  
-					//- 		p.textPosts Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos corporis quisquam officiis sint explicabo, pariatur eveniet, quibusdam exercitationem enim quia, repudiandae laudantium reiciendis dolore quaerat asperiores accusamus!
-					//- 		p.smallinfo by username, 27-10-2017 | 0 comments | x min read
-					//- div#bro.col-sm-12.col-md-6.col-lg-6
-					//- 	div
-					//- 		img.imgPosts(src="images/350x220.png")
-					//- 		p.headertag HEALTH, VEGAN
-					//- 		h4.titlePosts A list of egg-substitutes for different occasions
-					//- 		p.textPosts Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui quos corporis quisquam officiis sint explicabo, pariatur eveniet, quibusdam exercitationem enim quia, repudiandae laudantium reiciendis dolore quaerat asperiores accusamus!
-					//- 		p.smallinfo by username, 27-10-2017 | 0 comments | x min read
 			
 			div.col-sm-12.col-md-12.col-lg-4.tall.sticky
 				h4 Subscribe
