--- a/app/views/register.pug
+++ b/app/views/register.pug
@@ -6,7 +6,6 @@ block content
 		br
 		br
 		br
-		p= message
 		div.row.justify-content-md-center
 			div.col-12.col-sm-12.col-md-8.col-lg-8
 				div.row
@@ -18,14 +17,15 @@ block content
 						br
 						h1 Sign up
 						h3 Don't worry, this will take less then a minute
-						form(action="/register", method="post" autocomplete="off")
+						form(action="/users/register", method="post" autocomplete="off")
 							div.form-group
 								input.register(name="firstname" placeholder="Firstname" class="form-control" required)
 								input.register(name="email" placeholder="email address" class="form-control" required)
+								p= message
 								input.register(name="username" placeholder="username" class="form-control" required)
 								input.register(name="password" placeholder="password" type="password" class="form-control" required)
 								button.btnRegister.btn.btn-info(type="submit") Sign up
 				div.row
 					div
 						p Already a member? 
-							a(href="/login") Sign in.
+							a(href="/users/login") Sign in.
