--- a/app/views/register.pug
+++ b/app/views/register.pug
@@ -13,8 +13,6 @@ block content
 						img.img-responsive.imgRoundborders(src="/images/register-image.png" style="width:100%;")
 					div.col-12.col-sm-12.col-md-8.col-lg-6
 						div.register-wrapper
-							br
-							br
 							h1 Sign up
 							h3 Don't worry, this will take less then a minute
 							form(action="/users/register", method="post" autocomplete="off")
@@ -23,7 +21,10 @@ block content
 									input.register(name="email" placeholder="email address" class="form-control" required)
 									p= message
 									input.register(name="username" placeholder="username" class="form-control" required)
-									input.register(name="password" placeholder="password" type="password" class="form-control" required)
+									input.register(name="password" placeholder="password" type="password" class="form-control" pattern=".{8,12}" required)
+									input#passwordfield.register(name="passwordConfirm" placeholder="confirm password" type="password" class="form-control" pattern=".{8,12}" required)
+									small(id="passwordfield" class="form-text text-muted" style="font-size: 0.7em;") Make sure it's between 8 - 12 characters long.
+									p= pmessage
 									button.btnRegister.btn.btn-info(type="submit") Sign up
 				div.row.no-gutters
 					div.logChange
